--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,13 @@
             <artifactId>log4j-api</artifactId>
             <version>2.13.3</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>4.0.9</version>
+        </dependency>
+
 
 
     </dependencies>
