--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,19 @@
                     <target>8</target>
                 </configuration>
             </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M5</version>
+            <configuration>
+                <systemPropertyVariables>
+                    <testng.dtd.http>true</testng.dtd.http>
+                </systemPropertyVariables>
+            </configuration>
+        </plugin>
         </plugins>
     </build>
+
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
         <dependency>
@@ -30,7 +41,7 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>7.3.0</version>
+            <version>6.14.3</version>
             <scope>test</scope>
         </dependency>
 
@@ -63,8 +74,5 @@
             <artifactId>extentreports</artifactId>
             <version>4.0.9</version>
         </dependency>
-
-
-
     </dependencies>
 </project>
