--- a/src/test/java/tests/TestData.properties
+++ b/src/test/java/tests/TestData.properties
@@ -1,4 +1,4 @@
-product.url = /productpage.0763194001.html
-category.url = /women/products/view-all.html
-customerService.url = /customer-service.html
+product.url=/productpage.0763194001.html
+category.url=/women/products/view-all.html
+customerService.url=/customer-service.html
 
